java notes improved